<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>InstructorView</class>
 <widget class="QMainWindow" name="InstructorView">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>846</width>
    <height>584</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="1">
     <layout class="QGridLayout" name="gridLayout">
      <item row="2" column="0" colspan="3">
       <widget class="QTableView" name="tableView_CourseSelection">
        <property name="minimumSize">
         <size>
          <width>7</width>
          <height>462</height>
         </size>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLineEdit" name="lineEdit_searchField"/>
      </item>
      <item row="1" column="1">
       <widget class="QComboBox" name="comboBox">
        <item>
         <property name="text">
          <string>Course Name</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Course Number</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Professor ID</string>
         </property>
        </item>
       </widget>
      </item>
      <item row="2" column="5" colspan="3">
       <widget class="QTableView" name="tableView_Activities"/>
      </item>
      <item row="0" column="0" colspan="2">
       <widget class="QLabel" name="label_2">
        <property name="font">
         <font>
          <pointsize>14</pointsize>
         </font>
        </property>
        <property name="text">
         <string>Instructor View</string>
        </property>
       </widget>
      </item>
      <item row="1" column="2">
       <widget class="QPushButton" name="pushButton_searchCourses">
        <property name="text">
         <string>Search</string>
        </property>
       </widget>
      </item>
      <item row="2" column="3">
       <widget class="Line" name="line_2">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
       </widget>
      </item>
      <item row="0" column="5" colspan="3">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QLabel" name="label">
          <property name="text">
           <string>Logged in as:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="label_userAccountName">
          <property name="text">
           <string>TextLabel</string>
          </property>
         </widget>
        </item>
        <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>40</width>
            <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
        <item>
         <widget class="QLabel" name="label_3">
          <property name="font">
           <font>
            <pointsize>15</pointsize>
           </font>
          </property>
          <property name="text">
           <string>Activities</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item row="1" column="5">
       <widget class="QPushButton" name="pushButton_createActivity">
        <property name="minimumSize">
         <size>
          <width>179</width>
          <height>0</height>
         </size>
        </property>
        <property name="text">
         <string>New</string>
        </property>
       </widget>
      </item>
      <item row="1" column="6">
       <widget class="QComboBox" name="comboBox_contextMenu">
        <property name="maximumSize">
         <size>
          <width>97</width>
          <height>25</height>
         </size>
        </property>
        <property name="currentText">
         <string>Options</string>
        </property>
        <property name="currentIndex">
         <number>0</number>
        </property>
        <property name="minimumContentsLength">
         <number>20</number>
        </property>
        <property name="iconSize">
         <size>
          <width>166</width>
          <height>22</height>
         </size>
        </property>
        <property name="duplicatesEnabled">
         <bool>false</bool>
        </property>
        <item>
         <property name="text">
          <string>Options</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Modify Activity</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>DeleteActivity</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Grade Activity</string>
         </property>
        </item>
       </widget>
      </item>
     </layout>
    </item>
    <item row="1" column="1">
     <widget class="QPushButton" name="pushButton_markSubmission">
      <property name="text">
       <string>Mark Submission</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>846</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="actionLogOut"/>
   </widget>
   <addaction name="menuFile"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="actionLogOut">
   <property name="text">
    <string>LogOut</string>
   </property>
  </action>
  <action name="actionCreate_Account">
   <property name="text">
    <string>Create Account</string>
   </property>
  </action>
  <action name="actionRestore_System">
   <property name="text">
    <string>Restore System</string>
   </property>
  </action>
  <action name="actionBackup_System">
   <property name="text">
    <string>Backup System</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
